--- a/frontend/src/components/HeroSection/HeroSection.scss
+++ b/frontend/src/components/HeroSection/HeroSection.scss
@@ -1,80 +1,85 @@
-.HeroSection {
+.Herosection {
   background-image: url(../../assets/Hero-2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   width: 100vw;
   height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .HeroItems {
+    text-align: center;
     position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
-    gap: 1%;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
+
     h1,
     p {
-      text-align: center;
+      margin: 0;
+      padding: 0;
+      color: #582b39;
     }
+
     .CTA {
       margin: auto;
-      position: relative;
       width: 120px;
       height: 40px;
-      background-color: #000;
+      background-image: url(../../assets/btn--background-1.jpg);
       display: flex;
       align-items: center;
-      color: white;
-      flex-direction: column;
       justify-content: center;
+      color: #fff6f1;
       border: none;
-      padding: 12px;
-      gap: 12px;
       border-radius: 8px;
       cursor: pointer;
-    }
+      position: relative;
+      z-index: 3;
 
-    .CTA::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      left: -4px;
-      top: -1px;
-      margin: auto;
-      width: 128px;
-      height: 48px;
-      border-radius: 10px;
-      background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
-      z-index: -10;
-      pointer-events: none;
-      transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    }
+      &::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        margin: auto;
+        width: 128px;
+        height: 48px;
+        border-radius: 10px;
+        background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
+        z-index: -10;
+        pointer-events: none;
+        transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      }
 
-    .CTA::after {
-      content: "";
-      z-index: -1;
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
-      transform: translate3d(0, 0, 0) scale(0.95);
-      filter: blur(20px);
-    }
+      &::after {
+        content: "";
+        z-index: -1;
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
+        transform: translate3d(0, 0, 0) scale(0.95);
+        filter: blur(20px);
+      }
 
-    .CTA:hover::after {
-      filter: blur(30px);
-    }
+      &:hover::after {
+        filter: blur(30px);
+      }
 
-    .CTA:hover::before {
-      transform: rotate(-180deg);
-    }
+      &:hover::before {
+        transform: rotate(-180deg);
+      }
 
-    .CTA:active::before {
-      scale: 0.7;
+      &:active::before {
+        transform: scale(0.7);
+      }
     }
   }
 }
