update HomePage and its components

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 footer {
+  background-color: #5d4037;
   width: 100%;
   text-align: center;
   padding: 1% 0px;
   align-self: flex-end;
+  color: #fff6f1;
 }
