--- a/frontend/src/pages/ProductPage/ProductPage.scss
+++ b/frontend/src/pages/ProductPage/ProductPage.scss
@@ -1,5 +1,7 @@
 .product-page {
+  margin: 10% 5%;
   padding: 20px;
+
   .breadcrumb {
     margin-bottom: 10px;
     a {
@@ -10,135 +12,190 @@
       }
     }
   }
-  .product-details {
+  .mainSection {
     display: flex;
+    flex-direction: row;
+    gap: 6%;
+
     .product-images {
+      flex-basis: 42%;
+
       .main-image {
-        width: 300px;
+        width: 100%;
         height: 300px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+        background-color: #fff6f1;
       }
       .thumbnail-images {
-        display: flex;
+        width: 100%;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        gap: 2%;
+
         img {
-          width: 60px;
-          height: 60px;
-          margin: 5px;
+          width: 100%;
+          height: 100%;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+          background-color: #fff6f1;
+          margin-bottom: 15%;
         }
       }
     }
-    .product-info {
-      margin-left: 20px;
-      h1 {
-        font-size: 24px;
-      }
-      .reviews {
-        margin: 10px 0;
-        span {
-          color: #f39c12;
-        }
-      }
-      .price {
-        .original-price {
-          text-decoration: line-through;
-          color: #777;
-        }
-        .discounted-price {
-          color: #e74c3c;
-          font-size: 20px;
-        }
-        .discount {
-          color: #e74c3c;
-        }
-      }
-      .color-options {
-        margin: 10px 0;
-        .color-option {
-          width: 20px;
-          height: 20px;
-          border-radius: 50%;
-          margin: 0 5px;
-          &.pink {
-            background: pink;
-          }
-          &.green {
-            background: green;
-          }
-          &.blue {
-            background: blue;
-          }
-        }
-      }
-      /* From Uiverse.io by dldrs */
-      .add-to-cart {
-        position: relative;
-        overflow: hidden;
-        outline: none;
-        cursor: pointer;
-        border-radius: 0;
-        border: none;
-        background-color: transparent;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-          rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-        font-family: "Inter", sans-serif;
-        padding: 0; // Remove any default padding
+    .product-details {
+      flex-basis: 42%;
+      display: flex;
+      flex-direction: column;
+      gap: 10%;
+      align-items: center;
 
-        .default-btn {
-          background-image: linear-gradient(
-            90.1deg,
-            rgba(84, 212, 228, 1) 0.2%,
-            rgba(68, 36, 164, 1) 99.9%
-          );
+      .product-info {
+        margin-left: 20px;
+        h1 {
+          font-size: 24px;
+        }
+        .reviews {
+          margin: 10px 0;
+          span {
+            color: #f39c12;
+          }
+        }
+        .price {
           display: flex;
+          flex-direction: row;
           align-items: center;
-          gap: 15px;
-          padding: 1em 3em;
-          border-radius: 0;
-          font-size: 14px;
-          font-weight: 500;
-          text-transform: uppercase;
-          transition: transform 0.3s ease;
-          z-index: 1; // Ensure it stays on top when not hovered
-        }
+          gap: 2%;
 
-        .hover-btn {
-          position: absolute;
-          top: 100%; // Move it out of view vertically
-          left: 0;
-          right: 0;
-          font-size: 16px;
-          padding: 1em 3em;
-          text-align: center;
-          background: linear-gradient(
-            63deg,
-            rgba(26, 35, 126, 1) 0%,
-            rgba(69, 39, 160, 1) 100%
-          );
+          .original-price {
+            text-decoration: line-through;
+            color: #777;
+            font-size: x-small;
+          }
+          .discounted-price {
+            font-weight: bolder;
+
+            p {
+              display: inline;
+            }
+          }
+          .discount {
+            color: #e74c3c;
+          }
+        }
+        hr {
+          stroke: #777;
+          stroke-width: 5%;
+          margin: 10% 0px;
+        }
+        .size-options {
+          display: grid;
+          grid-template-columns: auto auto auto auto auto;
+          margin-bottom: 5%;
+
+          span {
+            grid-area: 1/1/2/-1;
+            margin-bottom: 5%;
+          }
+          .size-option {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            margin: 0 5px;
+            &.pink {
+              background: pink;
+            }
+            &.green {
+              background: green;
+            }
+            &.blue {
+              background: blue;
+            }
+          }
+        }
+        /* From Uiverse.io by dldrs */
+        .add-to-cart {
+          position: relative;
+          overflow: hidden;
+          outline: none;
+          cursor: pointer;
+          border-radius: 0;
+          border: none;
+          background-color: transparent;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
             rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-          transition: transform 0.3s ease, top 0.3s ease; // Transition for smooth hover
-          z-index: 0; // Behind the default button
+          font-family: "Inter", sans-serif;
+          padding: 0;
+          margin-bottom: 20%;
+
+          .default-btn {
+            background-image: linear-gradient(
+              90.1deg,
+              rgba(84, 212, 228, 1) 0.2%,
+              rgba(68, 36, 164, 1) 99.9%
+            );
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 1em 3em;
+            border-radius: 0;
+            font-size: 14px;
+            font-weight: 500;
+            text-transform: uppercase;
+            transition: transform 0.3s ease;
+            z-index: 1; // Ensure it stays on top when not hovered
+          }
+
+          .hover-btn {
+            position: absolute;
+            top: 100%; // Move it out of view vertically
+            left: 0;
+            right: 0;
+            font-size: 16px;
+            padding: 1em 3em;
+            text-align: center;
+            background: linear-gradient(
+              63deg,
+              rgba(26, 35, 126, 1) 0%,
+              rgba(69, 39, 160, 1) 100%
+            );
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+              rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+            transition: transform 0.3s ease, top 0.3s ease; // Transition for smooth hover
+            z-index: 0; // Behind the default button
+          }
+
+          .default-btn span,
+          .hover-btn span {
+            color: hsl(0, 0%, 100%);
+          }
+
+          &:hover .default-btn {
+            transform: translateY(-100%);
+          }
+
+          &:hover .hover-btn {
+            top: 0; // Bring it into view
+            transform: translateY(0);
+          }
         }
 
-        .default-btn span,
-        .hover-btn span {
-          color: hsl(0, 0%, 100%);
-        }
+        .additional-info {
+          display: grid;
+          grid-template-columns: auto auto;
 
-        &:hover .default-btn {
-          transform: translateY(-100%);
-        }
+          span {
+            display: block;
+            margin: 10% 0;
 
-        &:hover .hover-btn {
-          top: 0; // Bring it into view
-          transform: translateY(0);
-        }
-      }
-
-      .additional-info {
-        margin-top: 10px;
-        span {
-          display: block;
-          margin: 5px 0;
+            img {
+              width: 10%;
+              height: 100%;
+            }
+            p {
+              display: inline;
+              text-align: center;
+              margin-left: 5%;
+            }
+          }
         }
       }
     }
