--- a/frontend/src/components/Product/Product.scss
+++ b/frontend/src/components/Product/Product.scss
@@ -4,9 +4,16 @@
   grid-template-rows: auto auto auto;
   gap: 2%;
 
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   .product {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     margin-bottom: 10%;
     cursor: pointer;
 
@@ -14,7 +21,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
       background-color: #fff6f1;
       width: 100%;
-      height: 100%;
+      height: 250px;
       margin-bottom: 10px;
     }
 
@@ -41,14 +48,17 @@
       padding: 0px;
       font-size: small;
     }
+
     .description {
       font-weight: lighter;
       color: #a79d9b;
       margin: 10px 0px 5px 0px;
       padding: 0px;
       font-size: small;
+      flex-grow: 1;
     }
   }
+
   .product:hover {
     transform: scale(1.05);
   }
