--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -8,10 +8,10 @@ header {
   flex-direction: row;
   gap: 40%;
   align-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // z-index: 1000;
   padding: 1% 0px;
 
   img {
