--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,12 @@ body {
   color: var(--text-color);
 }
 
+header {
+  align-self: flex-start;
+}
 main {
   margin: 2%;
+}
+footer {
+  align-self: flex-end;
 }
