--- a/frontend/src/pages/RegisterPage/RegisterPage.scss
+++ b/frontend/src/pages/RegisterPage/RegisterPage.scss
@@ -1,17 +1,96 @@
 .registerPage {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
+
+  .image {
+    flex-basis: 50%;
+    background-image: url(../../assets/Hero-1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0;
+  }
 
   .data {
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+    box-sizing: border-box;
+
+    .links {
+      display: flex;
+      flex-direction: row;
+      gap: 2%;
+      justify-content: flex-end;
+      width: 100%;
+      margin-right: 5%;
+
+      a {
+        button {
+          background-image: url(../../assets/btn--background-1.jpg);
+          color: #fff6f1;
+          padding: 5px 20px;
+          border: none;
+          cursor: pointer;
+          font-size: 0.9rem;
+        }
+      }
+    }
+
+    h1 {
+      margin-bottom: 5%;
+      font-size: 1.5rem;
+    }
+
     form {
       display: flex;
       flex-direction: column;
+      width: 100%;
+      align-items: center;
+
+      label {
+        font-weight: 900;
+        display: block;
+        margin-bottom: 2%;
+      }
 
       input {
-        padding: 2% 10%;
-        margin: 2%;
+        padding: 10px 40px;
+        margin-bottom: 5%;
+        text-align: center;
+        border: 1px solid #5d4037;
+        border-radius: 5px;
+        width: 80%;
       }
+
+      button {
+        padding: 10px 20px;
+        margin-top: 3%;
+        background-image: url(../../assets/btn--background-1.jpg);
+        color: #fff6f1;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 0.9rem;
+      }
+    }
+
+    .error {
+      color: red;
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 0.9rem;
+    }
+
+    a {
+      color: #e56d4b;
+      text-decoration: underline;
+      font-size: 0.9rem;
     }
   }
 }
