--- a/frontend/src/pages/LoginPage/LoginPage.scss
+++ b/frontend/src/pages/LoginPage/LoginPage.scss
@@ -43,10 +43,15 @@
     }
 
     h1 {
-      margin-bottom: 5%;
+      margin-bottom: 4%;
       font-size: 1.5rem;
     }
-
+    a {
+      color: #e56d4b;
+      text-decoration: underline;
+      font-size: 0.9rem;
+      margin-bottom: 2%;
+    }
     form {
       display: flex;
       flex-direction: column;
@@ -58,7 +63,11 @@
         display: block;
         margin-bottom: 2%;
       }
-
+      .label {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
       input {
         padding: 10px 40px;
         margin-bottom: 5%;
@@ -77,6 +86,7 @@
         border-radius: 5px;
         cursor: pointer;
         font-size: 0.9rem;
+        margin-bottom: 3%;
       }
     }
 
@@ -84,12 +94,6 @@
       color: red;
       margin-top: 10px;
       font-weight: bold;
-      font-size: 0.9rem;
-    }
-
-    a {
-      color: #e56d4b;
-      text-decoration: underline;
       font-size: 0.9rem;
     }
   }
