--- a/frontend/src/pages/RegisterPage/RegisterPage.scss
+++ b/frontend/src/pages/RegisterPage/RegisterPage.scss
@@ -43,10 +43,15 @@
     }
 
     h1 {
-      margin-bottom: 5%;
+      margin-bottom: 2%;
       font-size: 1.5rem;
     }
-
+    a {
+      color: #e56d4b;
+      text-decoration: underline;
+      font-size: 0.9rem;
+      margin-bottom: 2%;
+    }
     form {
       display: flex;
       flex-direction: column;
@@ -57,6 +62,11 @@
         font-weight: 900;
         display: block;
         margin-bottom: 2%;
+      }
+      .label {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
       }
 
       input {
@@ -84,12 +94,6 @@
       color: red;
       margin-top: 10px;
       font-weight: bold;
-      font-size: 0.9rem;
-    }
-
-    a {
-      color: #e56d4b;
-      text-decoration: underline;
       font-size: 0.9rem;
     }
   }
