--- a/frontend/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/frontend/src/pages/CheckoutPage/CheckoutPage.scss
@@ -64,5 +64,19 @@
         }
       }
     }
+    .items {
+      .cartitem {
+        margin-top: 10px;
+        text-align: center;
+        img {
+          width: 100%;
+        }
+        .measurements {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+        }
+      }
+    }
   }
 }
