--- a/frontend/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/frontend/src/pages/CheckoutPage/CheckoutPage.scss
@@ -16,6 +16,12 @@
       gap: 5%;
     }
   }
+  .placeOrder {
+    margin: 10% auto 0 auto;
+    padding: 2% 12%;
+    background-image: url(../../assets/btn--background-1.jpg);
+    color: #fff6f1;
+  }
   .orderConfirmationPage {
     flex-basis: 30%;
     display: flex;
