--- a/frontend/src/components/Features/Features.scss
+++ b/frontend/src/components/Features/Features.scss
@@ -1,5 +1,6 @@
 .features {
-  margin: 10% 18%;
+  margin: 5% 18% 2% 18%;
+  font-family: var(--secondary-font);
 
   .features-item {
     display: flex;
@@ -12,8 +13,21 @@
     .item3 {
       display: flex;
       flex-direction: row;
-      gap: 1%;
-      align-items: stretch;
+
+      img {
+        width: 30%;
+        height: 30%;
+        margin: 10% 5%;
+      }
+      .item-text {
+        h4 {
+          margin: 0;
+          font-family: var(--primary-font);
+        }
+        p {
+          font-family: var(--secondary-font);
+        }
+      }
     }
   }
 }
