--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,4 +1,4 @@
-footer {
+.footer {
   background-color: #5d4037;
   width: 100%;
   text-align: center;
@@ -6,4 +6,12 @@ footer {
   align-self: flex-end;
   color: #fff6f1;
   margin-top: 5%;
+}
+.FooterHome {
+  background-color: #5d4037;
+  width: 100%;
+  text-align: center;
+  padding: 5% 0px;
+  align-self: flex-end;
+  color: #fff6f1;
 }
