--- a/frontend/src/components/HeroSection/HeroSection.scss
+++ b/frontend/src/components/HeroSection/HeroSection.scss
@@ -1,5 +1,5 @@
 .Herosection {
-  background-image: url(../../assets/Hero-2.jpg);
+  background-image: url(/asset/Hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -30,55 +30,60 @@
       color: #582b39;
     }
 
-    .CTA {
-      margin: auto;
-      width: 120px;
-      height: 40px;
-      background-image: url(../../assets/btn--background-1.jpg);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff6f1;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      position: relative;
-      z-index: 3;
+    a {
+      text-decoration: none;
+      color: inherit;
 
-      &::before {
-        content: "";
-        position: absolute;
-        inset: 0;
+      .CTA {
         margin: auto;
-        width: 128px;
-        height: 48px;
-        border-radius: 10px;
-        background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
-        z-index: -10;
-        pointer-events: none;
-        transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      }
+        width: 120px;
+        height: 40px;
+        background-image: url(../../assets/btn--background-1.jpg);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff6f1;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        position: relative;
+        z-index: 3;
 
-      &::after {
-        content: "";
-        z-index: -1;
-        position: absolute;
-        inset: 0;
-        background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
-        transform: translate3d(0, 0, 0) scale(0.95);
-        filter: blur(20px);
-      }
+        &::before {
+          content: "";
+          position: absolute;
+          inset: 0;
+          margin: auto;
+          width: 128px;
+          height: 48px;
+          border-radius: 10px;
+          background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
+          z-index: -10;
+          pointer-events: none;
+          transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
 
-      &:hover::after {
-        filter: blur(30px);
-      }
+        &::after {
+          content: "";
+          z-index: -1;
+          position: absolute;
+          inset: 0;
+          background: linear-gradient(-45deg, #5d4037 0%, #e56d4b 100%);
+          transform: translate3d(0, 0, 0) scale(0.95);
+          filter: blur(20px);
+        }
 
-      &:hover::before {
-        transform: rotate(-180deg);
-      }
+        &:hover::after {
+          filter: blur(30px);
+        }
 
-      &:active::before {
-        transform: scale(0.7);
+        &:hover::before {
+          transform: rotate(-180deg);
+        }
+
+        &:active::before {
+          transform: scale(0.7);
+        }
       }
     }
   }
