--- a/frontend/src/pages/RegisterPage/RegisterPage.scss
+++ b/frontend/src/pages/RegisterPage/RegisterPage.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   .image {
     flex-basis: 50%;
@@ -21,6 +22,7 @@
     align-items: center;
     padding: 2%;
     box-sizing: border-box;
+    margin: auto;
 
     .links {
       display: flex;
